an update to the images and also the style

--- a/css/jccgateway.css
+++ b/css/jccgateway.css
@@ -1,15 +1,4 @@
-/*
 
-TemplateMo 587 Tiya Golf Club
-
-https://templatemo.com/tm-587-tiya-golf-club
-
-*/
-
-
-/*---------------------------------------
-  CUSTOM PROPERTIES ( VARIABLES )             
------------------------------------------*/
 :root {
   --white-color:                  #ffffff;
   --primary-color:                #81B29A;
@@ -643,7 +632,7 @@ strong {
   HERO        
 -----------------------------------------*/
 .hero-section {
-  background-image: url('../images/anna-rosar-ZxFyVBHMK-c-unsplash.jpg');
+  background-image: url('../images/topimage.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -695,7 +684,7 @@ strong {
   BACKGROUND IMAGE SECTION        
 -----------------------------------------*/
 .section-bg-image {
-  background-image: url('../images/frederik-rosar-NDSZcCfnsbY-unsplash.jpg');
+  background-image: url('../images/bottomimage.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
