--- a/css/jccgateway.css
+++ b/css/jccgateway.css
@@ -679,7 +679,12 @@ strong {
   z-index: 22;
 }
 
-
+.center {
+  border: 5px solid;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
 /*---------------------------------------
   BACKGROUND IMAGE SECTION        
 -----------------------------------------*/
