--- a/css/jccgateway.css
+++ b/css/jccgateway.css
@@ -680,9 +680,10 @@ strong {
 }
 
 .center {
-  border: 5px solid;
-  margin: auto;
-  width: 50%;
+  border: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
   padding: 10px;
 }
 /*---------------------------------------
